# adsb-mcp-server

./: .eslintrc.json  .gitignore  .mcpbignore  .versionrc.json  BUNDLE_INSTALLATION.md  GITHUB_ACTIONS.md  README.md  USAGE_EXAMPLES.md  activate_and_test.sh  install_mcpb.sh  launch_mcp_inspector.sh  manifest.json  package-lock.json  package.json  pyproject.toml  readsb_mcp_server.py  requirements-dev.txt  requirements.txt  setup.cfg  setup_remote_config.py  shared_utils.py  tsconfig.json  update_version.py
.github/workflows/: ci.yml  release.yml  test-bundle.yml
scripts/: sync_manifest_version.js  update_version.js  version.js
src/: readsb_mcp_server.ts  setup_remote_config.ts  shared_utils.ts
test/: __init__.py  debug_mcp_server.py  debug_mcp_server.ts  remote_mcp_client.py  remote_mcp_client.ts  shared_utils.py  test_remote_connection.py  test_remote_connection.ts
