[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsb-mcp-server"
version = "0.5.0"
description = "MCP Server for ADS-B Feeder data - Exposes aircraft tracking data and statistics"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
    {name = "ADS-B MCP Server Contributors"}
]
keywords = ["adsb", "mcp", "readsb", "ultrafeeder", "aircraft", "tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "mcp>=1.14.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
adsb-mcp-server = "readsb_mcp_server:main"

[tool.setuptools]
py-modules = ["readsb_mcp_server", "shared_utils", "setup_remote_config", "update_version"]

[tool.black]
line-length = 140
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 140
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv/",
    "build/",
    "dist/",
]

[tool.flake8]
max-line-length = 140
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]
